  * Use system libuv.
  * Install default plugin.ini and ui.ini files as examples.
  * Add an empty override_dh_auto_build-indep rule, so arch-independent
    don't actually build the whole thing. Also rename dh_auto_test to
    their -arch variants.
  * Add libutil-freebsd-dev to Build-Depends for kfreebsd-any.
  * Add hurd.patch with some fixes to the build on hurd-i386 systems.
  * Drop remove-m64_flag_for_mips64el_alpha.patch, merged upstream.
  * Make mame build verbosely by default, without entangling it to DH_VERBOSE.

  [ Cesare Falco ]
  * Improved get-orig-source target
  * Updated mame.ini files to most recent *path entries
  * Install samples and additional .ini files as well

 -- Cesare Falco <c.falco@ubuntu.com>  Fri, 08 Jul 2016 13:08:40 +0200

mame (0.175-1) unstable; urgency=medium

  * New upstream release.
  * Rename and extend mips64el patch to attempt to fix alpha's similar
    build failure.
  * Build with included portmidi on kfreebsd-* architectures, as system
    libportmidi-dev is not available on these.
  * Add -ldl to LDFLAGS on kFreeBSD to fix an early build failure.
  * Make GENIEOS=freebsd so the actual genie binary is called.

 -- Jordi Mallach <jordi@debian.org>  Tue, 05 Jul 2016 18:14:40 +0200

mame (0.174-1) unstable; urgency=medium

  [ Cesare Falco ]
  * New upstream release (LP: #1590678) (LP: #1562705)
  * Removed patches now included upstream
  * debian/rules:
    - x32 has 32bit pointers, split amd64 rule
    - reduce memory required by ld on all archs (Ubuntu)
    - remove -g gcc switch when no DEBUG required

  [ Jordi Mallach ]
  * debian/rules: don't set PTR64 on mips64el.
  * Add removing-m64_flag_for_mips64el.patch: avoid using -m64 on mips64el
    to fix a FTBFS. Thanks to Daniel Knezevic for the patch (closes: #827798).

 -- Jordi Mallach <jordi@debian.org>  Mon, 04 Jul 2016 16:05:33 +0200

mame (0.173-6) unstable; urgency=medium

  * Brown paper bag release.
  * Revert x32 change in -5 that broke amd64 build.